# lwmem

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  library.json
.github/workflows/: build-and-test.yml  release.yml
cmake/: gcc-arm-none-eabi.cmake
dev/: lwmem_dev.sln  lwmem_dev.vcxproj  lwmem_dev.vcxproj.filters  lwmem_opts.h  main.cpp
dev/VisualStudio/: lwmem_config.h  lwmem_dev.sln  lwmem_dev.vcxproj  lwmem_dev.vcxproj.filters  lwmem_opts.h  main.c
docs/: conf.py  doxyfile.doxy  index.rst
docs/api-reference/: index.rst  lwmem.rst  lwmem_config.rst  lwmem_opt.rst  lwmem_sys.rst
docs/examples/: _lwmem_config.h  _lwmem_config_template.h  _lwmem_sys.c  index.rst
docs/examples_src/: example_alloc_from_region.c  example_minimal.c  example_realloc_enlarge_full.c  example_realloc_enlarge_full_log.c  example_realloc_region.c  example_regions_definitions.c  example_regions_definitions_custom.c
docs/get-started/: index.rst
docs/src/: _application_note.h  _lwmem_config.h  _lwmem_sys.h  _mainpage.h  structure_default.xml  structure_realloc_enlarge_3.xml
docs/static/images/: logo.drawio  lwmem_arch  structure_alloc_free_steps.xml  structure_first_alloc.xml  structure_realloc_cases.xml  structure_realloc_enlarge_1.xml  structure_realloc_enlarge_2.xml  structure_realloc_shrink.xml  structure_realloc_shrink_fragmented.xml
docs/user-manual/: how-it-works.rst  index.rst  instances.rst  light-version.rst  realloc-algorithm.rst  thread-safety.rst
examples/lib/FreeRTOS/CMSIS_RTOS_V2/: cmsis_os.h
examples/stm32/lwmem_rtos_stm32l496_discovery/: CMakeLists.txt
examples/stm32/lwmem_rtos_stm32l496_discovery/STM32CubeIDE/: .cproject  .project
examples/stm32/lwmem_rtos_stm32l496_discovery/inc/: lwmem_config.h  lwmem_opts.h  main.h
examples/stm32/lwmem_rtos_stm32l496_discovery/src/: main.c
examples/stm32/lwmem_stm32l496_discovery/: CMakeLists.txt
examples/stm32/lwmem_stm32l496_discovery/STM32CubeIDE/: .cproject  .project  LwMEM_STM32L496G_Discovery.elf.launch
examples/stm32/lwmem_stm32l496_discovery/inc/: lwmem_config.h  lwmem_opts.h  main.h
examples/stm32/lwmem_stm32l496_discovery/src/: main.c  stm32l4xx_it.c
examples/stm32l496g-discovery/lwmem/STM32CubeIDE/: .cproject  .project
examples/stm32l496g-discovery/lwmem/inc/: lwmem_config.h  main.h
examples/stm32l496g-discovery/lwmem/src/: main.c
examples/stm32l496g-discovery/lwmem_RTOS/STM32CubeIDE/: .cproject  .project
examples/stm32l496g-discovery/lwmem_RTOS/inc/: lwmem_config.h
examples/stm32l496g-discovery/lwmem_RTOS/src/: main.c
examples/win32/: CMakeLists.txt  CMakePresets.json  lwmem_examples.sln
examples/win32/lwmem/: CMakeLists.txt  lwmem.vcxproj  lwmem_config.h  lwmem_opts.h  main.c
examples/win32/lwmem_multi_ins_multi_region/: lwmem_config.h  lwmem_multi_ins_multi_region.vcxproj  lwmem_opts.h  main.c
examples/win32/lwmem_multi_region/: CMakeLists.txt  lwmem_multi_region.vcxproj  lwmem_multi_region.vcxproj.filters  lwmem_opts.h  main.c
examples/win32/lwmem_os/: CMakeLists.txt  lwmem_config.h  lwmem_opts.h  lwmem_os.vcxproj  main.c
lwmem/: CMakeLists.txt  library.cmake
lwmem/src/include/lwmem/: lwmem.h  lwmem.hpp  lwmem_config_default.h  lwmem_config_template.h  lwmem_opt.h  lwmem_opts_template.h
lwmem/src/include/system/: lwmem_sys.h
lwmem/src/lwmem/: lwmem.c  lwmem.cpp
lwmem/src/system/: lwmem_sys_cmsis_os.c  lwmem_sys_template.c  lwmem_sys_threadx.c  lwmem_sys_win32.c
src/dyn_mem/: dyn_mem.c
src/include/dyn_mem/: dyn_mem.h
src/include/lwmem/: lwmem.h  lwmem_config_default.h  lwmem_config_template.h
src/include/system/: lwmem_sys.h
src/lwmem/: lwmem.c
src/system/: lwmem_sys_cmsis_os.c  lwmem_sys_template.c  lwmem_sys_win32.c
tests/: CMakeLists.txt  lwmem_test.c  lwmem_test_available_mem.c  lwmem_test_region.c  lwmem_test_simple.c  test.h  test.py  test_file.cpp  tests.h
tests/test_available_mem/: cmake.cmake  lwmem_opts.h  lwmem_test_available_mem.c
tests/test_memory_structure/: cmake.cmake  lwmem_test_memory_structure.c
tests/test_region_allocation/: cmake.cmake  lwmem_test_region_allocation.c
tests/test_region_size_alignment/: cmake.cmake  lwmem_test_region.c
tests/test_simple_config/: cmake.cmake  lwmem_opts.h  lwmem_test_simple.c
tests/test_statistics/: cmake.cmake  lwmem_opts.h  lwmem_test_statistic.c
tests/test_stats_compile/: cmake.cmake  lwmem_opts.h  lwmem_test_stats_compile.c
